# Mazyod.github.io

./: .actrc  .gitignore  .gitmodules  .prettierrc  .travis.yml  BROWSER_TESTING.md  CLAUDE.md  CNAME  Gemfile  Makefile  PERFORMANCE_OPTIMIZATIONS.md  README.md  Rakefile  TODO.md  _config.yml  about.md  devlog.html  index.html  package-lock.json  package.json  pelicanconf.py  playwright.config.js  publishconf.py  pyproject.toml  sitemap.xml  tasks.py
.github/: dependabot.yml
_drafts/: back-me-up!.md  genserver.md  quality-of-service.md
_includes/: head.html  header.html  home-header.html  minimal-header.html  post-footer.html
_layouts/: post.html
_posts/: 2011-06-15-hello-world.md  2011-10-30-temptation.md  2011-11-18-fail.markdown  2011-11-18-fail.md  2011-11-18-the-clustering-phenomenal.markdown  2011-11-18-the-clustering-phenomenal.md  2011-11-18-the-usual-fail.md  2011-11-21-a-packets-life.markdown  2011-11-21-a-packets-life.md  2011-11-25-rush-2.markdown  2011-11-25-rush.md  2011-12-02-the-thing.md  2011-12-05-nope.md  2011-12-06-370-for-a-hard-disk.markdown  2011-12-06-370-for-a-hard-disk.md  2011-12-08-sniffing-without-a-cold.md  2011-12-15-whats-in-an-ssd.markdown  2011-12-15-whats-in-an-ssd.md  2011-12-16-speedy-goodness.markdown  2011-12-16-speedy-goodness.md  2011-12-20-a-video-is-worth-a-thousand-pictures.md  2012-01-10-catching-up.markdown  2012-01-10-catching-up.md  2012-01-13-dama-v1-8-5.md  2012-01-13-provisioning-nightmare-v4-0.md  2012-02-10-what-shall-it-be.markdown  2012-02-10-what-shall-it-be.md  2012-02-16-a-promise.markdown  2012-02-16-a-promise.md  2012-03-19-fulfilling-a-promise.md  2012-04-04-the-settings-journey.markdown  2012-04-04-the-settings-journey.md  2012-04-21-a-bunch-of-nonsense.md  2012-04-28-the-hopes.md  2012-05-04-a-bit-step-forward-2.markdown  2012-05-04-a-bit-step-forward-2.md  2012-05-28-a-sneak-peak.md  2012-05-30-video-tut-d.markdown  (+192 more)
themes/retrospective/: .gitignore  MODERN_STANDARDS.md  Makefile  pyproject.toml
themes/retrospective/static/: manifest.json
themes/retrospective/static/css/: fallbacks.css  modern-features.css  theme.css
themes/retrospective/static/js/: feature-detection.js  polyfills.js  sw-register.js  sw.js
themes/retrospective/templates/: article.html  base.html  disqus.html  index.html  modern-base.html  navbar.html  offline.html  page.html
(+494 files in other folders)
