[tool.poetry]
name = "mazyod-github-io"
version = "0.1.0"
description = ""
authors = ["Mazyad Alabduljaleel <mazjaleel@gmail.com>"]
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "^3.10"
pelican = { version = "^4.8.0", extras = ["markdown"] }
pelican-neighbors = "^1.2.0"
minchin-pelican-plugins-nojekyll = "^1.2.0"
pymdown-extensions = "^10.1"
pelican-sitemap = "^1.1.0"
pelican-yaml-metadata = "^2.1.1"


[tool.poetry.group.dev.dependencies]
bpython = "^0.24"
black = "^23.7.0"
invoke = "^2.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
