[project]
name = "mazyod-github-io"
version = "0.1.0"
description = ""
authors = [{ name = "Mazyad Alabduljaleel", email = "mazjaleel@gmail.com" }]
requires-python = ">=3.12,<3.14"
readme = "README.md"
dependencies = [
    "pelican[markdown]>=4.8.0,<5",
    "pelican-neighbors>=1.2.0,<2",
    "minchin-pelican-plugins-nojekyll>=1.2.0,<2",
    "pymdown-extensions~=10.1",
    "pelican-sitemap>=1.1.0,<2",
    "pelican-yaml-metadata>=2.1.1,<3",
]

[dependency-groups]
dev = [
    "invoke>=2.2.0,<3",
    "ruff>=0.11.0",
]

[tool.uv]
package = false

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
