[tool.poetry]
name = "pelican-press-start"
version = "0.1.0"
description = ""
authors = ["Mazyad Alabduljaleel <mazjaleel@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
Pygments = "^2.16.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
